Changes for 4.0.0alpha1

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 3.4.2rc1

New features:
..F....... [ZBXNEXT-4046] implemented dashboard widget minimum height limit (gcalenko)

Bug fixes:
..F.....S. [ZBX-11042] allowed libcurl to choose SMTP authentication mechanism other than PLAIN (gleb, vjaceslavs)
..F....... [ZBX-12374] fixed frontend side DNS parser logic to be same as server side DNS parser logic (gcalenko, Sasha)
..F....... [ZBX-8997] fixed trigger expression validation test form (gcalenko, Sasha)
..F....... [ZBX-12558] fixed scroll duration in dashboard after adding a new widget (miks)
..F.I...S. [ZBX-12434] fixed housekeeping of problems and events for deleted items and triggers; added optional database patch to cleanup problems for deleted items and triggers (vso)
..F....... [ZBX-12646] fixed incorrect SQL query in availability reports (Sasha)
..F....... [ZBX-12545] fixed undefined index error on latest data page when host was deleted in another session (gcalenko)
..F....... [ZBX-12416] optimized data selection of user preferences stored in profiles (gcalenko)
..F....... [ZBX-12321] fixed removal of multiselect options using backspace button (miks)
..F....... [ZBX-11607] fixed a rounding of large unsigned numbers (miks)
.......P.. [ZBX-12668] removed delay between sending batches of cached historical data by active proxies (wiper)
..F....... [ZBX-12554] fixed item helper description for proc_info and diplay order for vfs.dir.size (gcalenko)
..F....... [ZBX-12605] fixed line graph was displayed as points for data taken from trends (gcalenko)
..F....... [ZBX-12404] fixed visibility of item data first row for 'latest data' page and 'audit log' page (gcalenko)
..F....... [ZBX-12546] fixed maps not loading without built-in JSON support (Ivo)
...G...PS. [ZBX-12634] fixed incorrect subnet mask calculation when CIDR is less than 8 (Andris, vso)