@@ -748,7 +748,10 @@ static int	item_preproc_regsub_op(zbx_variant_t *value, const char *params, char
 	}
 
 	if (NULL == new_value)
-		new_value = zbx_strdup(NULL, "");
+	{
+		*errmsg = zbx_dsprintf(*errmsg, "pattern does not match", pattern);
+		return FAIL;
+	}
 
 	zbx_variant_clear(value);
 	zbx_variant_set_str(value, new_value);
